- Remove TODO FIXED: Image block: Fix an issue where the image would overlap content if there was alignment in place (frontend)
git-svn-id: https://cssigniter.svn.beanstalkapp.com/cssigniter/plugins/gutenbee/trunk@32037 4294cb29-2c39-44b5-8b85-408dc27d7d38

--- a/src/blocks/image/_editor.scss
+++ b/src/blocks/image/_editor.scss
@@ -9,6 +9,12 @@
   margin: 0;
   padding: 0;
   position: relative;
+
+  &::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
 
 .block-editor-block-list__block[data-type="gutenbee/image"][data-align="center"] {
